classDiagram

    class DBConfig{
        DTO to configure DB object
    }
    class TableExtension{
        Table functions
        isTableExists()
        createTable()
        alterTable()
        dropTable()
        getTableSchema()
    }
    class SimpleAccessExtension{
        CRUD operations
        select()
        update()
        insert()
        delete()
    }
    class PreparedQueryExtension{
        Placeholders functionality
        prepare()
        preparePlaceholders()
        preparePlaceholder()
    }
    class PDOPreparedQueryExtension{
        createPreparedQuery()
        executePreparedQuery()
        bindValues()
    }
    class QueryBuilderExtension{
        Fluid access query builder
        table()
        from()
        into()
        columns()
        select()
        join()
        where()
        orderBy()
        limit()
        selectOne()
        select()
        do()
        count()
        compileSelectQuery()
    }
    class DB{
        query()
        fetch()
        fetchAll()
        setResponseMode()
        sanitize()
        castBinds()
    }

    DBConfig               <|-- DB
    SimpleAccessExtension  <|-- DB
    PreparedQueryExtension <|-- DB
    TableExtension         <|-- DB
    QueryBuilderExtension  <|-- DB

    DB <|-- DBGatewayDBStructure
    DB <|-- DBGatewayBlock
    DB <|-- DBGatewayElement
    DB <|-- DBGatewayOptions
    DB <|-- DBGatewayUser
    DB <|-- DBGatewayVisitor

    class DBGatewayDBStructure{
        isTableExists()
        createTable()
        alterTable()
        getTableColumns()
        getPrefix()
        getAppPrefix()
    }

    class DBGatewayDBStructureInterface{
        isTableExists()
        createTable()
        alterTable()
        getTableColumns()
        getPrefix()
        getAppPrefix()
    }

    class DBStructureHandler{
        analyzeCurrentStructure()
        updateSchema()
        dropSchema()
        setSchema()
    }

    DBGatewayDBStructure --|> DBGatewayDBStructureInterface

    DBGatewayDBStructureInterface <|-- DBStructureHandler
